// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace utils getProject should return project 1`] = `
Object {
  "architect": Object {
    "build": Object {
      "builder": "@angular-devkit/build-angular:browser",
      "configurations": Object {
        "development": Object {
          "buildOptimizer": false,
          "extractLicenses": false,
          "namedChunks": true,
          "optimization": false,
          "sourceMap": true,
          "vendorChunk": true,
        },
        "production": Object {
          "budgets": Array [
            Object {
              "maximumError": "2.5mb",
              "maximumWarning": "500kb",
              "type": "initial",
            },
            Object {
              "maximumError": "4kb",
              "maximumWarning": "2kb",
              "type": "anyComponentStyle",
            },
          ],
          "fileReplacements": Array [
            Object {
              "replace": "src/environments/environment.ts",
              "with": "src/environments/environment.prod.ts",
            },
          ],
          "outputHashing": "all",
        },
      },
      "defaultConfiguration": "production",
      "options": Object {
        "assets": Array [
          "src/favicon.ico",
          "src/assets",
        ],
        "index": "src/index.html",
        "inlineStyleLanguage": "scss",
        "main": "src/main.ts",
        "outputPath": "dist/schematics-test",
        "polyfills": "src/polyfills.ts",
        "scripts": Array [],
        "styles": Array [
          "src/styles.scss",
        ],
        "tsConfig": "tsconfig.app.json",
      },
    },
    "extract-i18n": Object {
      "builder": "@angular-devkit/build-angular:extract-i18n",
      "options": Object {
        "browserTarget": "schematics-test:build",
      },
    },
    "serve": Object {
      "builder": "@angular-devkit/build-angular:dev-server",
      "configurations": Object {
        "development": Object {
          "browserTarget": "schematics-test:build:development",
        },
        "production": Object {
          "browserTarget": "schematics-test:build:production",
        },
      },
      "defaultConfiguration": "development",
    },
    "test": Object {
      "builder": "@angular-devkit/build-angular:karma",
      "options": Object {
        "assets": Array [
          "src/favicon.ico",
          "src/assets",
        ],
        "inlineStyleLanguage": "scss",
        "karmaConfig": "karma.conf.js",
        "main": "src/test.ts",
        "polyfills": "src/polyfills.ts",
        "scripts": Array [],
        "styles": Array [
          "src/styles.scss",
        ],
        "tsConfig": "tsconfig.spec.json",
      },
    },
  },
  "prefix": "app",
  "projectType": "application",
  "root": "",
  "schematics": Object {
    "@schematics/angular:application": Object {
      "strict": true,
    },
    "@schematics/angular:component": Object {
      "style": "scss",
    },
  },
  "sourceRoot": "src",
}
`;

exports[`Workspace utils getProjectTargets should return project targets 1`] = `
Object {
  "build": Object {
    "builder": "@angular-devkit/build-angular:browser",
    "configurations": Object {
      "development": Object {
        "buildOptimizer": false,
        "extractLicenses": false,
        "namedChunks": true,
        "optimization": false,
        "sourceMap": true,
        "vendorChunk": true,
      },
      "production": Object {
        "budgets": Array [
          Object {
            "maximumError": "2.5mb",
            "maximumWarning": "500kb",
            "type": "initial",
          },
          Object {
            "maximumError": "4kb",
            "maximumWarning": "2kb",
            "type": "anyComponentStyle",
          },
        ],
        "fileReplacements": Array [
          Object {
            "replace": "src/environments/environment.ts",
            "with": "src/environments/environment.prod.ts",
          },
        ],
        "outputHashing": "all",
      },
    },
    "defaultConfiguration": "production",
    "options": Object {
      "assets": Array [
        "src/favicon.ico",
        "src/assets",
      ],
      "index": "src/index.html",
      "inlineStyleLanguage": "scss",
      "main": "src/main.ts",
      "outputPath": "dist/schematics-test",
      "polyfills": "src/polyfills.ts",
      "scripts": Array [],
      "styles": Array [
        "src/styles.scss",
      ],
      "tsConfig": "tsconfig.app.json",
    },
  },
  "extract-i18n": Object {
    "builder": "@angular-devkit/build-angular:extract-i18n",
    "options": Object {
      "browserTarget": "schematics-test:build",
    },
  },
  "serve": Object {
    "builder": "@angular-devkit/build-angular:dev-server",
    "configurations": Object {
      "development": Object {
        "browserTarget": "schematics-test:build:development",
      },
      "production": Object {
        "browserTarget": "schematics-test:build:production",
      },
    },
    "defaultConfiguration": "development",
  },
  "test": Object {
    "builder": "@angular-devkit/build-angular:karma",
    "options": Object {
      "assets": Array [
        "src/favicon.ico",
        "src/assets",
      ],
      "inlineStyleLanguage": "scss",
      "karmaConfig": "karma.conf.js",
      "main": "src/test.ts",
      "polyfills": "src/polyfills.ts",
      "scripts": Array [],
      "styles": Array [
        "src/styles.scss",
      ],
      "tsConfig": "tsconfig.spec.json",
    },
  },
}
`;
